tests/machine/x/fs/dataset_where_filter.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,22): error FS0039: The value or constructor 'name' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,39): error FS0039: The value or constructor 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,44): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,57): error FS0039: The value or constructor 'name' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,72): error FS0039: The value or constructor 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,77): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,90): error FS0039: The value or constructor 'name' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,109): error FS0039: The value or constructor 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,114): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,127): error FS0039: The value or constructor 'name' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,144): error FS0039: The value or constructor 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(6,149): error FS0001: This expression was expected to have type
    string    
but here has type
    int    

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(7,50): error FS0039: The field, constructor or member 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(7,78): error FS0039: The value or constructor 'name' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(7,91): error FS0039: The field, constructor or member 'name' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(7,99): error FS0039: The value or constructor 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(7,111): error FS0039: The field, constructor or member 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(7,118): error FS0039: The value or constructor 'is_senior' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(7,136): error FS0039: The field, constructor or member 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(12,60): error FS0039: The field, constructor or member 'name' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(12,93): error FS0039: The field, constructor or member 'age' is not defined

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(12,116): error FS0039: The field, constructor or member 'is_senior' is not defined
